# ROS-labs

./: .gitignore
module01/ex01/: commands.txt
module02/ex01/: .bashrc  ex01.txt
module02/ex02/: package_path_ros2topic.txt
module02/ex03/sega/: CMakeLists.txt  package.xml
module02/ex04/: colcon_build.txt
module02/ex05/: rosnode_info.txt  rosnode_list.txt
module02/ex06/: cmd_vel.txt
module02/ex08/: rqt_console.csv
module02/ex09/pack/: CMakeLists.txt  package.xml
module02/ex10/ex10/: CMakeLists.txt  package.xml
module02/ex10/ex10/src/: publisher_member_function.cpp
module02/ex10/text_to_cmd_vel/: CMakeLists.txt  package.xml
module02/ex10/text_to_cmd_vel/src/: turtle_cmd_controller.cpp
module03/: README.md
module03/ex01/name_services/: CMakeLists.txt  package.xml
module03/ex01/service_full_name/: CMakeLists.txt  package.xml
module03/ex01/service_full_name/src/: client_name.cpp  service_name.cpp
module03/ex02/: CMakeLists.txt  package.xml
module03/ex02/action_turtle_commands/: package.xml
module03/ex02/action_turtle_commands/src/: action_turtle_server.cpp
module03/ex02/src/: action_turtle_client.cpp  action_turtle_server.cpp
module03/ex03/pose_speed_x1.yaml/: metadata.yaml  pose_speed_x1.yaml_0.db3
module03/ex03/pose_speed_x2.yaml/: metadata.yaml  pose_speed_x2.yaml_0.db3
module03/ex04/: doctor.txt
module03/ex05/move_to_goal/: package.xml
module03/ex05/move_to_goal/src/: move_to_old.cpp
module04/: README.md
module04/ex01/: frames_2023-10-03_20.46.58.gv  last_transform.txt  transform.txt
module04/ex02/: carrot.rviz
module04/ex02/tf2_turtlesim_carrots/: CMakeLists.txt  frames_2023-10-14_14.21.39.gv  package.xml
module04/ex03/tf2_turtle_back_in_future/: package.xml
module05/ex03/ubot/: readme.md
module05/ex04/: readme.md
module05/ex04/circle_cmd_vel/: CMakeLists.txt  package.xml
module05/ex04/ubot/ubot_bringup/: package.xml
module05/ex05/: readme.md
module05/ex05/heart_move/: CMakeLists.txt  package.xml
module05/ex05/heart_move/src/: move.cpp
module06/ex01/: readme.md
module06/ex02/: readme.md
module06/ex04/: readme.md
module06/ex04/ubot_lidar_controller/: CMakeLists.txt  package.xml
module06/ex05/: readme.md
module06/ex05/simple_dsensor_control/: CMakeLists.txt  package.xml
(+17 files in other folders)
